kube/mock-qserv-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock-qserv-deployment
  labels:
    app: mock-qserv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mock-qserv
  template:
    metadata:
      labels:
        app: mock-qserv
    spec:
      containers:
      - name: mock-qserv
        image: mysql/mysql-server:8.0.13-1.1.8
        ports:
        - containerPort: 3306
