kube/oracle-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oracle-deployment
  labels:
    app: oracle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oracle
  template:
    metadata:
      labels:
        app: oracle
    spec:
      containers:
      - name: oracle
        image: lsstdax/oracle-db-demo
        ports:
        - containerPort: 1521
        volumeMounts:
        - mountPath: /dev/shm
          name: dshm
      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
