kube/querymonkey-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: querymonkey-deployment
  labels:
    app: querymonkey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: querymonkey
  template:
    metadata:
      labels:
        app: querymonkey
    spec:
      containers:
      - name: querymonkey
        image: lsstdax/querymonkey:latest
