kube/tap-schema-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tap-schema-deployment
  labels:
    app: tap-schema
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tap-schema
  template:
    metadata:
      labels:
        app: tap-schema
    spec:
      containers:
      - name: tap-schema
        image: lsstdax/mysql-db-demo:latest
        ports:
        - containerPort: 3306
